testing mobile overflow issue

--- a/styles/sass/partials/_base-styles.scss
+++ b/styles/sass/partials/_base-styles.scss
@@ -46,6 +46,7 @@ button {
     letter-spacing: .1rem;
     font-family: $primary-font;
     text-transform: uppercase;
+    margin:0 auto;
     background-color: $bright-pink;
     border:none;
     box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
