--- a/styles/sass/partials/_media_queries.scss
+++ b/styles/sass/partials/_media_queries.scss
@@ -5,6 +5,11 @@
     h2 {
         font-size: 1rem;
     }
+
+    nav .wrapper {
+        
+        margin-right:0;
+    }
     .about {
         .wrapper {
             display: block;
@@ -55,6 +60,7 @@
                 width: 100%;
                 display: flex;
                 flex-direction: column;
+                
             }
         }
     }
